# biomarkers

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  env.yml  environment.yml  pyproject.toml  setup.cfg  write_dockerfile
.github/workflows/: publish-docker.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/biomarkers/: __init__.py  biomarkers.py  utils.py
src/biomarkers/cli/: anat.py  fslanat.py  func.py  rest.py  run.py
src/biomarkers/data/: fan_atlas.csv  fsf.template  power2011_atlas.tsv  scratch.R
src/biomarkers/flows/: anat2parquet.py  cat.py  connectivity.py  cuff.py  debias.py  fslanat.py  func.py
src/biomarkers/interfaces/: catutils.py  connectivity.py  first.py  fslanat.py  fslutils.py
src/biomarkers/models/: cat.py  fslanat.py
src/biomarkers/nodes/: io.py
src/biomarkers/task/: compcor.py  imgs.py  utils.py
src/biomarkers/workflows/: anat.py  cat.py  first.py  rest.py
tests/: test_biomarkers.py  test_restwf.py
tools/: cat_test.py  lock  make_atlas.py  make_resting_atlas.py  mypy  run  run_example  write_nps_weights.py
