[project]
name = "biomarkers"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "nibabel",
    "nilearn",
    "numpy",
    "pandas",
    "prefect",
    "prefect_shell",
    "prefect-dask"
]
# note some dependencies only available through conda (see env.yml)
# downloaded from channel https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public
#   - bc <--- FSL sripts seem to depend on this
#   - fsl-first 
#   - fsl-misc_scripts <--- contains fsl_anat function
#   - fsl-bet2 <--- required by fsl_anat when images need brain extraction
#   - fsl-data_standard <--- for registration during fsl_anat
#   - fsl-data_first_models_336_bin <--- for segmentation during fsl_first
# NOTE: environmental variables must also be set see the Dockerfile, in particular
# FSLOUTPUTTYPE=NIFTI_GZ
# FSLDIR=/opt/conda  ---- or, in general path_to_conda_env, e.g., $HOME/conda/envs/fsl/envs/biomarkers

[project.scripts]
mark = "biomarkers.biomarkers:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = ".typings"
